// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Select with many options 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper select"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              id=":r4:"
            >
              <option>
                Foo
              </option>
              <option>
                Bar
              </option>
              <option>
                Baz
              </option>
              <option>
                Quux
              </option>
            </select>
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a Select with no options 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper select"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              id=":r0:"
            />
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a Select with one option 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper select"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              id=":r2:"
            >
              <option>
                Foo
              </option>
            </select>
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly as large 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper large select"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              id=":r8:"
            >
              <option>
                Foo
              </option>
            </select>
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly as small 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper small select"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              id=":r6:"
            >
              <option>
                Foo
              </option>
            </select>
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when disabled 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper select disabled"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              disabled=""
              id=":ra:"
            >
              <option>
                Foo
              </option>
            </select>
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when invalid 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper select invalid"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <select
              class="input"
              id=":rc:"
            >
              <option>
                Foo
              </option>
            </select>
            <span
              class="postfix"
            >
              <svg
                class="Z6OfUI2sH34- TphtDHcwxDc-"
                data-testid="arrowDown"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class=""
                  d="M7.703 8.291a.996.996 0 0 0-1.41.001.994.994 0 0 0 0 1.41l5 5.005a.998.998 0 0 0 1.415 0l5-5a.994.994 0 0 0 0-1.41.995.995 0 0 0-1.411-.001L12 12.584 7.703 8.291Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
